--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8">
     <link href="style.css" rel="stylesheet">
     <title>Michael Kroyan: Personal site and portfolio</title>
-    <h1>Michael Kroyan</h1>
 </head>
 <body>
     <nav>
         <ul>
-            <li><a href="index.html">Main</a></li>
+            <li><a href="index.html" class="current">Main</a></li>
             <li><a href="contact/index.html">Contact</a></li>
             <li><a href="projects/index.html">Projects</a></li>
             <li><a href="resume/index.html">Resume</a></li>
@@ -17,11 +16,14 @@
         </ul>
     </nav>
 
+    <h1>Michael Kroyan</h1>
+
     <p>Hello! My name is Michael. I am a Data Science student with a
         strong focus on large-scale analytic work and big data processing.
     This is the hub page of my portfolio, for Lab 1. </p>
     <img src="images/pont-neuf.jpg" alt="An impressionist painting of the
-    Pont-Neuf in Paris. It depicts a bridge across a river with buildings behind it.">
+    Pont-Neuf in Paris. It depicts a bridge across a river with buildings behind it."
+    width="600" height="809">
 
     <br>This is a painting of the Pont-Neuf across the Seine, in Paris.
 </body>
