--- a/resume/index.html
+++ b/resume/index.html
@@ -5,18 +5,18 @@
     <title>Resume</title>
     <link href="../style.css" rel="stylesheet">
 
-    <h1>Michael Kroyan</h1>
-    <p>Data Scientist and Statistical Analyst</p>
-
     <nav>
         <ul>
             <li><a href="../index.html">Main</a></li>
             <li><a href="../contact/index.html">Contact</a></li>
             <li><a href="../projects/index.html">Projects</a></li>
-            <li><a href="index.html">Resume</a></li>
+            <li><a href="index.html" class="current">Resume</a></li>
             <li><a href="https://github.com/ghost-written" target="_blank">Github</a></li>
         </ul>
     </nav>
+
+    <h1>Michael Kroyan</h1>
+    <p>Data Scientist and Statistical Analyst</p>
 
     <p>Contents:</p>
     <nav>
@@ -83,6 +83,7 @@
 
     <section id="skills">
       <h2>Skills</h2>
+        <br>
       <ul>
         <li>HTML, CSS, JavaScript, Python, R, Java, C#, C++</li>
         <li>Large data analysis, scripting, API integration</li>
