--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <p>Hello! My name is Michael. I am a Data Science student with a
         strong focus on large-scale analytic work and big data processing.
-    This is the hub page of my portfolio, for Lab 1. </p>
+    This is the hub page of my portfolio. </p>
     <img src="images/pont-neuf.jpg" alt="An impressionist painting of the
     Pont-Neuf in Paris. It depicts a bridge across a river with buildings behind it."
     width="600" height="809">
