Lab 3, JS implementation

--- a/index.html
+++ b/index.html
@@ -3,18 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <link href="style.css" rel="stylesheet">
+    <script type="module" src="./global.js"></script>
     <title>Michael Kroyan: Personal site and portfolio</title>
 </head>
 <body>
-    <nav>
-        <ul>
-            <li><a href="index.html" class="current">Main</a></li>
-            <li><a href="contact/index.html">Contact</a></li>
-            <li><a href="projects/index.html">Projects</a></li>
-            <li><a href="resume/index.html">Resume</a></li>
-            <li><a href="https://github.com/ghost-written" target="_blank">Github</a></li>
-        </ul>
-    </nav>
 
     <h1>Michael Kroyan</h1>
 
