--- a/projects/index.html
+++ b/projects/index.html
@@ -3,18 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <link href="../style.css" rel="stylesheet">
+    <script type="module" src="../global.js"></script>
     <title>Projects</title>
 </head>
 <body>
-    <nav>
-        <ul>
-            <li><a href="../index.html">Main</a></li>
-            <li><a href="../contact/index.html">Contact</a></li>
-            <li><a href="index.html" class="current">Projects</a></li>
-            <li><a href="../resume/index.html">Resume</a></li>
-            <li><a href="https://github.com/ghost-written" target="_blank">Github</a></li>
-        </ul>
-    </nav>
+
 
     <h1>Projects</h1>
 
