--- a/resume/index.html
+++ b/resume/index.html
@@ -4,16 +4,9 @@
     <meta charset="UTF-8">
     <title>Resume</title>
     <link href="../style.css" rel="stylesheet">
+    <script type="module" src="../global.js"></script>
 
-    <nav>
-        <ul>
-            <li><a href="../index.html">Main</a></li>
-            <li><a href="../contact/index.html">Contact</a></li>
-            <li><a href="../projects/index.html">Projects</a></li>
-            <li><a href="index.html" class="current">Resume</a></li>
-            <li><a href="https://github.com/ghost-written" target="_blank">Github</a></li>
-        </ul>
-    </nav>
+
 
     <h1>Michael Kroyan</h1>
     <p>Data Scientist and Statistical Analyst</p>
