Lab 3, JS implementation

--- a/projects/index.html
+++ b/projects/index.html
@@ -3,99 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <link href="../style.css" rel="stylesheet">
-    <script type="module" src="../global.js"></script>
     <title>Projects</title>
 </head>
 <body>
-
-
     <h1>Projects</h1>
-
     <div class="projects">
-        <article>
-            <h2>Lorem ipsum dolor sit.</h2>
-            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab, accusamus blanditiis cum dolore eum ipsa
-                ipsam porro possimus praesentium recusandae rem suscipit totam, vel? Deleniti dolore minus modi quae
-                rem.</p>
-        </article>
-        <article>
-            <h2>Expedita mollitia natus veritatis?</h2>
-            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
-            <p>Atque deserunt dignissimos esse eveniet facere fugit minima, nam nihil nobis, optio quo quos reiciendis
-                veniam. Assumenda corporis deserunt dolorem harum hic iure nemo, nesciunt quos tenetur, ullam veniam
-                voluptatum!</p>
-        </article>
-        <article>
-            <h2>Aliquam labore rerum ullam.</h2>
-            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
-            <p>At delectus doloremque ducimus facere facilis illo incidunt laudantium nam nemo optio, quasi quo soluta
-                sunt ut vel vero voluptate. Atque blanditiis deleniti doloribus ducimus eaque nostrum placeat porro
-                qui.</p>
-        </article>
-        <article>
-            <h2>Commodi iusto omnis repellat?</h2>
-            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
-            <p>Alias animi deserunt, dolores ex expedita harum illo, illum laborum modi mollitia neque officia omnis
-                porro quam quibusdam quod, recusandae reiciendis suscipit! Animi fugit in natus provident soluta
-                voluptatem voluptatum!</p>
-        </article>
-        <article>
-            <h2>Assumenda distinctio ducimus nulla.</h2>
-            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
-            <p>Ab aperiam culpa dolorum eaque eveniet explicabo libero obcaecati quaerat sint tempora. Consequuntur, hic
-                magni minima molestiae quas quidem repellendus voluptas! Ad, atque, veniam! Aspernatur hic nam repellat
-                sed vero!</p>
-        </article>
-        <article>
-            <h2>Amet corporis quis veniam.</h2>
-            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
-            <p>Accusamus, adipisci atque dolorem doloribus dolorum incidunt iure non officiis quaerat quisquam
-                repudiandae sit, suscipit tempore. Assumenda consequuntur ipsam iste numquam odio. Blanditiis eius
-                laudantium maiores molestias quam quia sequi!</p>
-        </article>
-        <article>
-            <h2>Aspernatur in inventore quam!</h2>
-            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
-            <p>Aspernatur blanditiis et eum, obcaecati officiis perferendis, quae quis, saepe sint tempore voluptate
-                voluptatum. Ab commodi dolorum esse inventore laborum nisi nulla pariatur perferendis, soluta, unde
-                veniam vitae voluptas voluptatem?</p>
-        </article>
-        <article>
-            <h2>Debitis eveniet saepe sit!</h2>
-            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
-            <p>Ab accusantium adipisci alias aliquid animi architecto consequuntur dignissimos dolorem eaque eveniet
-                fugiat harum in, ipsa laboriosam laborum laudantium nostrum officia perferendis quae repellendus
-                repudiandae sapiente, sed suscipit veniam vitae.</p>
-        </article>
-        <article>
-            <h2>Enim est excepturi in!</h2>
-            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
-            <p>Consequuntur distinctio eos excepturi hic minus nam pariatur quae recusandae repellat ut. Accusamus
-                cumque, dicta dolorem eius exercitationem fugiat impedit laborum modi molestias mollitia, officiis
-                quidem recusandae sed soluta totam.</p>
-        </article>
-        <article>
-            <h2>Dignissimos quaerat quasi ut.</h2>
-            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
-            <p>Assumenda, enim illum impedit iure odit quam sequi tempore totam! Ab accusamus adipisci commodi deleniti
-                doloremque ducimus eaque, facilis harum, iusto molestiae necessitatibus nemo nesciunt officia pariatur
-                quae reprehenderit tempore!</p>
-        </article>
-        <article>
-            <h2>Enim eos odio voluptas?</h2>
-            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
-            <p>Ad adipisci at consectetur dolor, dolorem ducimus ea error ipsum iure labore laboriosam laudantium maxime
-                modi molestiae molestias natus nesciunt, nostrum, numquam placeat provident quasi qui quo recusandae sit
-                tenetur.</p>
-        </article>
-        <article>
-            <h2>Magni nulla possimus voluptatum?</h2>
-            <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
-            <p>Ab amet consequatur est expedita fuga itaque magnam maxime nam neque numquam, porro praesentium quam
-                ratione repellat sit suscipit unde voluptas. Corporis, culpa cumque error hic placeat reiciendis
-                reprehenderit voluptas.</p>
-        </article>
+        <script src="../global.js" type="module"></script>
+        <script src="projects.js" type="module"></script>
     </div>
 </body>
 </html>
