Lab 4, JS Implementation

--- a/index.html
+++ b/index.html
@@ -10,9 +10,17 @@
 
     <h1>Michael Kroyan</h1>
 
+    <div id="profile-stats"></div>
+
     <p>Hello! My name is Michael. I am a Data Science student with a
         strong focus on large-scale analytic work and big data processing.
     This is the hub page of my portfolio. </p>
+
+    <h2>Latest Projects</h2>
+        <div class="projects">
+            <script src="index.js" type="module" defer></script>
+        </div>
+
     <img src="images/pont-neuf.jpg" alt="An impressionist painting of the
     Pont-Neuf in Paris. It depicts a bridge across a river with buildings behind it."
     width="600" height="809">
