--- a/projects/index.html
+++ b/projects/index.html
@@ -7,10 +7,24 @@
     <title>Projects</title>
 </head>
 <body>
-    <h1>Projects</h1>
+    <h1 class="projects-title">Projects</h1>
+
+    <div class="chart">
+      <svg id="projects-pie-plot" viewBox="-50 -50 100 100" width="300" height="300"></svg>
+      <ul class="legend"></ul>
+    </div>
+
+    <input
+      class="searchBar"
+      type="search"
+      aria-label="Search projects"
+      placeholder="🔍 Search projects…"
+    />
+
     <div class="projects">
         <script src="../global.js" type="module"></script>
         <script src="projects.js" type="module"></script>
     </div>
 </body>
+
 </html>
