--- a/meta/index.html
+++ b/meta/index.html
@@ -8,7 +8,7 @@
     <title>Meta</title>
 </head>
 <body>
-    <h1>Projects</h1>
+    <h1>Meta</h1>
     <p>This page includes stats about the code of this website.</p>
     <div id="stats"></div>
 
